[metadata]
name = maine
summary = Ansible Deployment of UnitedStack containers
description_file =
    README.md
author = UnitedStack
author_email = devops@unitedstack.com
home_page = https://git.ustack.com/cgit/devops/maine/
python_requires = >=3.6
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    maine
data_files =
    share/maine-ansible =
        setup.cfg
        ansible.cfg
    share/maine-ansible/config = config/*
    share/maine-ansible/etc_examples = etc/*
    share/maine-ansible/library = library/*
    share/maine-ansible/playbooks = playbooks/*
    share/maine-ansible/roles = roles/*
    share/maine-ansible/tools = tools/maine-ansible
    share/maine-ansible/tools = tools/maine-init-runonce
    share/maine-ansible/vars_plugins = vars_plugins/*

[entry_points]
console_scripts =
    maine-genpwd = maine.cmd.genpwd:main
    maine-genhost = maine.cmd.genhost:main
    maine-diffinventory = maine.cmd.diffinventory:main
